src/test/deca/syntax/valid/idempotent/ifthenelse.deca
{
	int x = 1;
	int y;
	if ((x == 4)) {
		(y = 4);
	} else {
		if ((x == 3)) {
			(y = 3);
		} else {
			if ((x == 2)) {
				(y = 2);
			} else {
				(y = 1);
			} 
		} 
	} 
}
