src/test/deca/syntax/invalid/homebrew/testIf2.deca
int a=0;
int b=5;
else if {
		a=b;
}
